// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsyncSeriesHook callAsync empty 1`] = `
[
  [
    1,
  ],
  [
    2,
  ],
  [
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncSeriesHook callAsync empty 2`] = `
[
  [
    1,
  ],
  [
    2,
  ],
  [
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncSeriesHook callAsync multi 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncSeriesHook callAsync multi 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncSeriesHook callAsync multi return error 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  "end",
  [
    [Error: error-2],
  ],
]
`;

exports[`AsyncSeriesHook callAsync multi return error 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  "end",
  [
    [Error: error-2],
  ],
]
`;

exports[`AsyncSeriesHook callAsync multi return value ignore 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncSeriesHook callAsync multi return value ignore 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncSeriesHook callAsync single 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncSeriesHook callAsync single 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncSeriesHook callAsync single return value ignore 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncSeriesHook callAsync single return value ignore 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncSeriesHook promise reject multi return value ignore 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "error",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncSeriesHook promise reject multi return value ignore 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "error",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncSeriesHook promise reject single return value ignore 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "error",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncSeriesHook promise reject single return value ignore 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "error",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncSeriesHook promise resolve multi 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  [
    "end",
  ],
  [
    undefined,
  ],
]
`;

exports[`AsyncSeriesHook promise resolve multi 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  [
    "end",
  ],
  [
    undefined,
  ],
]
`;

exports[`AsyncSeriesHook promise resolve multi return value ignore 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  [
    "end",
  ],
  [
    undefined,
  ],
]
`;

exports[`AsyncSeriesHook promise resolve multi return value ignore 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  [
    "end",
  ],
  [
    undefined,
  ],
]
`;

exports[`AsyncSeriesHook promise resolve single 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  [
    "end",
  ],
  [
    undefined,
  ],
]
`;

exports[`AsyncSeriesHook promise resolve single 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  [
    "end",
  ],
  [
    undefined,
  ],
]
`;

exports[`AsyncSeriesHook promise resolve single return value ignore 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  [
    "end",
  ],
  [
    undefined,
  ],
]
`;

exports[`AsyncSeriesHook promise resolve single return value ignore 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  [
    "end",
  ],
  [
    undefined,
  ],
]
`;
